"Bug caused ultra long function name so the function list covered the whole with!"

--- a/client/gfx/style.css
+++ b/client/gfx/style.css
@@ -887,6 +887,7 @@ ul#tabList li.tabFileItem.active button.closeFileTab {
 .functionListWrap {
 	display: none;
 background-color: white;
+	max-width: 400px;
 }
 
 select.functionList {
